--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cryptr": "^6.0.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.2.2",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cryptr": "^4.0.1",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.7",
     "nodemon": "^2.0.15"
